cloudformation/coreos_cluster.json
{
  "AWSTemplateFormatVersion": "2010-09-09",

  "Description": "A Gaia cluster based off an auto scaling group",

  "Mappings" : {
      "RegionMap" : {
          "eu-central-1" : {
              "CoreosStableAMI" : "ami-02211b1f",
              "NatAMI": "ami-46073a5b"
          },
          "ap-northeast-1" : {
              "CoreosStableAMI" : "ami-22d27b22",
              "NatAMI": "ami-03cf3903"
          },
          "sa-east-1" : {
              "CoreosStableAMI" : "ami-45a62a58",
              "NatAMI": "ami-fbfa41e6"
          },
          "ap-southeast-2" : {
              "CoreosStableAMI" : "ami-2b2e6911",
              "NatAMI": "ami-e7ee9edd"
          },
          "ap-southeast-1" : {
              "CoreosStableAMI" : "ami-0ef1f15c",
              "NatAMI": "ami-b49dace6"
          },
          "us-east-1" : {
              "CoreosStableAMI" : "ami-6b1cd400",
              "NatAMI": "ami-303b1458"
          },
          "us-west-2" : {
              "CoreosStableAMI" : "ami-f5a5a5c5",
              "NatAMI": "ami-69ae8259"
          },
          "us-west-1" : {
              "CoreosStableAMI" : "ami-bf8477fb",
              "NatAMI": "ami-7da94839"
          },
          "eu-west-1" : {
              "CoreosStableAMI" : "ami-50f4b927",
              "NatAMI": "ami-6975eb1e"
          }
      },
      "SubnetConfig" : {
          "VPC"      : { "CIDR" : "10.10.0.0/16" },
          "Public"   : { "CIDR" : "10.10.0.0/18" },
          "PrivateEtcd"   : { "CIDR" : "10.10.64.0/18" },
          "PrivateCoreOS" : { "CIDR" : "10.10.128.0/18" },
          "PrivateInfra"  : { "CIDR" : "10.10.192.0/18" }
      }
  },

  "Parameters": {
    "EtcdInstanceType" : {
      "Description" : "EC2 HVM instance type (m3.medium, etc).",
      "Type" : "String",
      "Default" : "t2.micro",
      "ConstraintDescription" : "Must be a valid EC2 HVM instance type."
    },
    "EtcdClusterSize": {
      "Default": "3",
      "MinValue": "3",
      "MaxValue": "9",
      "Description": "Number of nodes in Etcd cluster (3-9).",
      "Type": "Number"
    },
    "CoreOSClusterSize": {
      "Default": "3",
      "MinValue": "3",
      "MaxValue": "40",
      "Description": "Number of nodes in CoreOS cluster (3-40).",
      "Type": "Number"
    },
    "CoreOSInstanceType" : {
      "Description" : "CoreOS EC2 HVM instance type (m3.medium, etc).",
      "Type" : "String",
      "Default" : "t2.micro",
      "ConstraintDescription" : "Must be a valid EC2 HVM instance type."
    },
    "AdvertisedIPAddress": {
      "Description": "Use 'private' if your etcd cluster is within one region or 'public' if it spans regions or cloud providers.",
      "Default": "private",
      "AllowedValues": ["private", "public"],
      "Type": "String"
    },
    "KeyPairName" : {
      "Description" : "The name of an EC2 Key Pair to allow SSH access to etcd cluster",
      "Type" : "String",
      "MinLength": "1",
      "MaxLength": "64",
      "AllowedPattern" : "[-_ a-zA-Z0-9]*",
      "ConstraintDescription" : "can contain only alphanumeric characters, spaces, dashes and underscores."
    },
    "AllowSSHFrom" : {
      "Description" : "The net block (CIDR) that SSH is available to.",
      "Type" : "String",
      "MinLength": "9",
      "MaxLength": "18",
      "Default" : "0.0.0.0/0",
      "AllowedPattern" : "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
      "ConstraintDescription" : "must be a valid CIDR range of the form x.x.x.x/x."
    }
  },

  "Resources": {

    "VPC" : {
      "Type" : "AWS::EC2::VPC",
      "Properties" : {
        "CidrBlock" : { "Fn::FindInMap" : [ "SubnetConfig", "VPC", "CIDR" ]},
        "Tags" : [
          { "Key" : "Application", "Value" : { "Ref" : "AWS::StackName" } },
          { "Key" : "Network", "Value" : "Public" },
          { "Key" : "Name", "Value" : "Gaia VPC" },
          { "Key" : "Group", "Value" : "Gaia" }
        ]
      }
    },

    "PublicSubnet" : {
      "DependsOn" : ["VPC"],
      "Type" : "AWS::EC2::Subnet",
      "Properties" : {
        "VpcId" : { "Ref" : "VPC" },
        "CidrBlock" : { "Fn::FindInMap" : [ "SubnetConfig", "Public", "CIDR" ]},
        "Tags" : [
          { "Key" : "Application", "Value" : { "Ref" : "AWS::StackName" } },
          { "Key" : "Network", "Value" : "Public" },
          { "Key" : "Name", "Value" : "Public Subnet" }
        ]
      }
    },

    "InternetGateway" : {
      "Type" : "AWS::EC2::InternetGateway",
      "Properties" : {
        "Tags" : [
          { "Key" : "Application", "Value" : { "Ref" : "AWS::StackName" } },
          { "Key" : "Network", "Value" : "Public" }
        ]
      }
    },

    "GatewayToInternet" : {
       "DependsOn" : ["VPC", "InternetGateway"],
       "Type" : "AWS::EC2::VPCGatewayAttachment",
       "Properties" : {
         "VpcId" : { "Ref" : "VPC" },
         "InternetGatewayId" : { "Ref" : "InternetGateway" }
       }
    },

    "PublicRouteTable" : {
      "DependsOn" : ["VPC"],
      "Type" : "AWS::EC2::RouteTable",
      "Properties" : {
        "VpcId" : { "Ref" : "VPC" },
        "Tags" : [
          { "Key" : "Application", "Value" : { "Ref" : "AWS::StackName" } },
          { "Key" : "Network", "Value" : "Public" }
        ]
      }
    },

    "PublicRoute" : {
      "DependsOn" : ["PublicRouteTable", "InternetGateway"],
      "Type" : "AWS::EC2::Route",
      "Properties" : {
        "RouteTableId" : { "Ref" : "PublicRouteTable" },
        "DestinationCidrBlock" : "0.0.0.0/0",
        "GatewayId" : { "Ref" : "InternetGateway" }
      }
    },

    "PublicSubnetRouteTableAssociation" : {
      "DependsOn" : ["PublicSubnet", "PublicRouteTable"],
      "Type" : "AWS::EC2::SubnetRouteTableAssociation",
      "Properties" : {
        "SubnetId" : { "Ref" : "PublicSubnet" },
        "RouteTableId" : { "Ref" : "PublicRouteTable" }
      }
    },

    "PrivateSubnetEtcd" : {
      "DependsOn" : ["VPC"],
      "Type" : "AWS::EC2::Subnet",
      "Properties" : {
        "VpcId" : { "Ref" : "VPC" },
        "CidrBlock" : { "Fn::FindInMap" : [ "SubnetConfig", "PrivateEtcd", "CIDR" ]},
        "Tags" : [
          { "Key" : "Application", "Value" : { "Ref" : "AWS::StackName" } },
          { "Key" : "Network", "Value" : "Private" },
          { "Key" : "Name", "Value" : "etcd Cluster" }
        ]
      }
    },

    "PrivateSubnetCoreOS" : {
      "DependsOn" : ["VPC"],
      "Type" : "AWS::EC2::Subnet",
      "Properties" : {
        "VpcId" : { "Ref" : "VPC" },
        "CidrBlock" : { "Fn::FindInMap" : [ "SubnetConfig", "PrivateCoreOS", "CIDR" ]},
        "Tags" : [
          { "Key" : "Application", "Value" : { "Ref" : "AWS::StackName" } },
          { "Key" : "Network", "Value" : "Private" },
          { "Key" : "Name", "Value" : "CoreOS Cluster" }
        ]
      }
    },

    "PrivateSubnetInfra" : {
      "DependsOn" : ["VPC"],
      "Type" : "AWS::EC2::Subnet",
      "Properties" : {
        "VpcId" : { "Ref" : "VPC" },
        "CidrBlock" : { "Fn::FindInMap" : [ "SubnetConfig", "PrivateInfra", "CIDR" ]},
        "Tags" : [
          { "Key" : "Application", "Value" : { "Ref" : "AWS::StackName" } },
          { "Key" : "Network", "Value" : "Private" },
          { "Key" : "Name", "Value" : "Infra Cluster" }
        ]
      }
    },

    "PrivateRouteTable" : {
      "DependsOn" : ["VPC"],
      "Type" : "AWS::EC2::RouteTable",
      "Properties" : {
        "VpcId" : { "Ref" : "VPC" },
        "Tags" : [
          { "Key" : "Application", "Value" : { "Ref" : "AWS::StackName" } },
          { "Key" : "Network", "Value" : "Private" }
        ]
      }
    },

    "PrivateSubnetRouteTableAssociation" : {
      "DependsOn" : ["PrivateSubnetEtcd", "PrivateRouteTable"],
      "Type" : "AWS::EC2::SubnetRouteTableAssociation",
      "Properties" : {
        "SubnetId" : { "Ref" : "PrivateSubnetEtcd" },
        "RouteTableId" : { "Ref" : "PrivateRouteTable" }
      }
    },

    "PrivateSubnetRouteTableAssociation" : {
      "DependsOn" : ["PrivateSubnetCoreOS", "PrivateRouteTable"],
      "Type" : "AWS::EC2::SubnetRouteTableAssociation",
      "Properties" : {
        "SubnetId" : { "Ref" : "PrivateSubnetCoreOS" },
        "RouteTableId" : { "Ref" : "PrivateRouteTable" }
      }
    },

    "PrivateSubnetRouteTableAssociation" : {
      "DependsOn" : ["PrivateSubnetInfra", "PrivateRouteTable"],
      "Type" : "AWS::EC2::SubnetRouteTableAssociation",
      "Properties" : {
        "SubnetId" : { "Ref" : "PrivateSubnetInfra" },
        "RouteTableId" : { "Ref" : "PrivateRouteTable" }
      }
    },

    "NatSecurityGroup" : {
      "DependsOn" : ["VPC"],
      "Type" : "AWS::EC2::SecurityGroup",
      "Properties" : {
        "GroupDescription" : "NAT Security Group",
        "VpcId" : { "Ref" : "VPC" },
        "SecurityGroupIngress" : [
          {"IpProtocol" : "tcp", "FromPort" : "22", "ToPort" : "22","CidrIp" : {"Ref" : "AllowSSHFrom"}}
        ],
        "Tags" : [
          { "Key" : "Name", "Value" : "NAT Security Group" }
        ]
      }
    },

    "NatSecurityGroupIngress1" : {
      "DependsOn" : ["NatSecurityGroup"],
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": { "Ref": "NatSecurityGroup" },
        "IpProtocol": "icmp",
        "FromPort": "-1",
        "ToPort": "-1",
        "SourceSecurityGroupId": { "Ref": "NatSecurityGroup" }
      }
    },

    "NatSecurityGroupIngress22" : {
      "DependsOn" : ["NatSecurityGroup"],
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": { "Ref": "NatSecurityGroup" },
        "IpProtocol": "tcp",
        "FromPort": "22",
        "ToPort": "22",
        "SourceSecurityGroupId": { "Ref": "NatSecurityGroup" }
      }
    },

    "NatSecurityGroupIngress80" : {
      "DependsOn" : ["NatSecurityGroup"],
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": { "Ref": "NatSecurityGroup" },
        "IpProtocol": "tcp",
        "FromPort": "80",
        "ToPort": "80",
        "SourceSecurityGroupId": { "Ref": "NatSecurityGroup" }
      }
    },

    "NatSecurityGroupIngress443" : {
      "DependsOn" : ["NatSecurityGroup"],
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": { "Ref": "NatSecurityGroup" },
        "IpProtocol": "tcp",
        "FromPort": "443",
        "ToPort": "443",
        "SourceSecurityGroupId": { "Ref": "NatSecurityGroup" }
      }
    },

    "NAT" : {
      "DependsOn" : ["PublicSubnet", "NatSecurityGroup"],
      "Type" : "AWS::EC2::Instance",
      "Properties" : {
        "InstanceType" : "t2.micro",
        "KeyName"  : { "Ref" : "KeyPairName" },
        "SourceDestCheck" : "false",
        "ImageId" : { "Fn::FindInMap" : [ "NatRegionMap", { "Ref" : "AWS::Region" }, "AMI" ]},
        "NetworkInterfaces" : [{
          "GroupSet"                 : [{ "Ref" : "NatSecurityGroup" }],
          "AssociatePublicIpAddress" : "true",
          "DeviceIndex"              : "0",
          "DeleteOnTermination"      : "true",
          "SubnetId"                 : { "Ref" : "PublicSubnet" }
        }],
        "Tags" : [
          { "Key" : "Name", "Value" : "NAT" }
        ],
        "UserData" : { "Fn::Base64" : { "Fn::Join" : ["", [
          "#!/bin/bash\n",
          "yum update -y && yum install -y yum-cron && chkconfig yum-cron on"
        ]]}}
      }
    },

    "PrivateRoute" : {
      "DependsOn" : ["PrivateRouteTable", "NAT"],
      "Type" : "AWS::EC2::Route",
      "Properties" : {
        "RouteTableId" : { "Ref" : "PrivateRouteTable" },
        "DestinationCidrBlock" : "0.0.0.0/0",
        "InstanceId" : { "Ref" : "NAT" }
      }
    },

    "EtcdSecurityGroup": {
      "DependsOn" : ["VPC"],
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Etcd Security Group",
        "VpcId" : { "Ref" : "VPC" },
        "SecurityGroupIngress": [
          {"IpProtocol": "tcp", "FromPort": "22", "ToPort": "22", "CidrIp": {"Ref": "AllowSSHFrom"}}
        ],
        "Tags" : [
          { "Key" : "Name", "Value" : "Etcd Security Group" }
        ]
      }
    },

    "Ingress2379": {
      "DependsOn" : ["EtcdSecurityGroup"],
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupName": {"Ref": "EtcdSecurityGroup"}, "IpProtocol": "tcp", "FromPort": "2379", "ToPort": "2379", "SourceSecurityGroupId": {
          "Fn::GetAtt" : [ "EtcdSecurityGroup", "GroupId" ]
        }
      }
    },

    "Ingress2380": {
      "DependsOn" : ["EtcdSecurityGroup"],
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupName": {"Ref": "EtcdSecurityGroup"}, "IpProtocol": "tcp", "FromPort": "2380", "ToPort": "2380", "SourceSecurityGroupId": {
          "Fn::GetAtt" : [ "EtcdSecurityGroup", "GroupId" ]
        }
      }
    },

    "cliROrole": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Effect": "Allow",
              "Principal": {
                "Service": [
                  "ec2.amazonaws.com"
                ]
              },
              "Action": [
                "sts:AssumeRole"
              ]
            }
          ]
        },
        "Policies": [
          {
            "PolicyName": "CLIROAccess",
            "PolicyDocument": {
              "Statement": [
                {
                  "Effect": "Allow",
                  "Action": [
                    "ec2:Describe*"
                  ],
                  "Resource": "*"
                },
                {
                  "Effect": "Allow",
                  "Action": [
                    "autoscaling:Describe*"
                  ],
                  "Resource": "*"
                }
              ]
            }
          }
        ],
        "Path": "/"
      }
    },
    "CLIROAccessProfile": {
      "Type": "AWS::IAM::InstanceProfile",
      "Properties": {
        "Path": "/",
        "Roles": [
          {
            "Ref": "cliROrole"
          }
        ]
      }
    },

    "EtcdServerAutoScale": {
      "Type": "AWS::AutoScaling::AutoScalingGroup",
      "Properties": {
        "AvailabilityZones": {"Fn::GetAZs": ""},
        "LaunchConfigurationName": {"Ref": "EtcdServerLaunchConfig"},
        "MinSize": "3",
        "MaxSize": "9",
        "DesiredCapacity": {"Ref": "EtcdClusterSize"},
        "Tags": [
            {"Key": "Name", "Value": { "Ref" : "AWS::StackName" }, "PropagateAtLaunch": true}
        ]
      }
    },

    "EtcdServerLaunchConfig": {
      "Type": "AWS::AutoScaling::LaunchConfiguration",
      "Properties": {
        "AvailabilityZones": { "Fn::GetAtt" : [ "PrivateSubnetEtcd", "AvailabilityZone" ] },
        "ImageId" : { "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "CoreosStableAMI" ]},
        "InstanceType": {"Ref": "EtcdInstanceType"},
        "KeyName": {"Ref": "KeyPairName"},
        "SecurityGroups": [{"Ref": "EtcdSecurityGroup"}],
        "IamInstanceProfile": {"Ref": "CLIROAccessProfile"},
        "UserData" : { "Fn::Base64":
          { "Fn::Join": [ "", [
            "#cloud-config\n\n",
            "coreos:\n",
            "  etcd2:\n",
            "    advertise-client-urls: http://$", { "Ref": "AdvertisedIPAddress" }, "_ipv4:2379\n",
            "    initial-advertise-peer-urls: http://$", { "Ref": "AdvertisedIPAddress" }, "_ipv4:2380\n",
            "    listen-client-urls: http://0.0.0.0:2379\n",
            "    listen-peer-urls: http://$", { "Ref": "AdvertisedIPAddress" }, "_ipv4:2380\n",
            "  units:\n",
            "    - name: etcd2.service\n",
            "      command: stop\n",
            "    - name: etcd-peers.service\n",
            "      command: start\n",
            "      content: |\n",
            "        [Unit]\n",
            "        Description=Write a file with the etcd peers that we should bootstrap to\n",
            "        [Service]\n",
            "        Restart=on-failure\n",
            "        RestartSec=10\n",
            "        ExecStartPre=/usr/bin/docker pull monsanto/etcd-aws-cluster:latest\n",
            "        ExecStartPre=/usr/bin/docker run --rm=true -v /etc/sysconfig/:/etc/sysconfig/ monsanto/etcd-aws-cluster:latest\n",
            "        ExecStart=/usr/bin/systemctl start etcd2\n",
            "    - name: fleet.service\n",
            "      command: start\n",
            "write_files:\n",
            "  - path: /etc/systemd/system/etcd2.service.d/30-etcd_peers.conf\n",
            "    permissions: 0644\n",
            "    content: |\n",
            "      [Service]\n",
            "      # Load the other hosts in the etcd leader autoscaling group from file\n",
            "      EnvironmentFile=/etc/sysconfig/etcd-peers\n"
            ] ]
          }
        }
      }
    },

    "CoreOSServerAutoScale": {
      "Type": "AWS::AutoScaling::AutoScalingGroup",
      "Properties": {
        "AvailabilityZones": {"Fn::GetAZs": ""},
        "LaunchConfigurationName": {"Ref": "CoreOSServerLaunchConfig"},
        "MinSize": "3",
        "MaxSize": "40",
        "DesiredCapacity": {"Ref": "CoreOSClusterSize"},
        "Tags": [
            {"Key": "Name", "Value": { "Ref" : "AWS::StackName" }, "PropagateAtLaunch": true}
        ]
      }
    },

    "CoreOSServerLaunchConfig": {
      "Type": "AWS::AutoScaling::LaunchConfiguration",
      "Properties": {
        "AvailabilityZones": { "Fn::GetAtt" : [ "PrivateSubnetCoreOS", "AvailabilityZone" ] },
        "ImageId" : { "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "CoreosStableAMI" ]},
        "InstanceType": {"Ref": "CoreOSInstanceType"},
        "KeyName": {"Ref": "KeyPairName"},
        "SecurityGroups": [{"Ref": "EtcdSecurityGroup"}],
        "UserData" : { "Fn::Base64":
          { "Fn::Join": [ "", [
            "#cloud-config\n\n",
            "coreos:\n",
            "  etcd2:\n",
            "    proxy: on\n",
            "    listen-client-urls: http://localhost:2379\n",
            "    initial-cluster: replaceME=http://10.10.64.1:2380\n",
            "  fleet:\n",
            "    etcd_servers: http://localhost:2379\n",
            "  locksmith:\n",
            "    etcd_servers: http://localhost:2379\n",
            "  units:\n",
            "    - name: etcd2.service\n",
            "      command: start\n",
            "    - name: fleet.service\n",
            "      command: start\n"
            ] ]
          }
        }
      }
    },

    "Outputs" : {
      "NATIP" : {
        "Description" : "NAT IP address",
        "Value" : { "Fn::GetAtt" : [ "NAT", "PublicIp" ] }
      }
    }
  }
}
